new promo sports

--- a/newx-demoGames.css
+++ b/newx-demoGames.css
@@ -6,9 +6,6 @@ body {
   color: #ffffff;
   text-shadow: 2px 2px 10px rgb(0, 0, 0);
   background-color: black;
-  /* Add custom scrollbar styles */
-  scrollbar-width: thin; /* Firefox */
-  scrollbar-color: #333 #000; /* Firefox (thumb and track colors) */
 }
 
 /* scrollbar */
@@ -1050,7 +1047,18 @@ a {
     font-size: 21px;
     padding: 6px;
   }
-  .content::-webkit-scrollbar,
+  .modal-content::-webkit-scrollbar {
+    display: none; /* Hide scrollbar for Chrome, Safari and Opera */
+    overflow-y: scroll; /* Add the ability to scroll */
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+  .content::-webkit-scrollbar {
+    display: none; /* Hide scrollbar for Chrome, Safari and Opera */
+    overflow-y: scroll; /* Add the ability to scroll */
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
   .navBar::-webkit-scrollbar {
     display: none; /* Hide scrollbar for Chrome, Safari and Opera */
     overflow-y: scroll; /* Add the ability to scroll */
