--- a/newx-demoGames.css
+++ b/newx-demoGames.css
@@ -528,7 +528,7 @@ body {
 .missionU img {
   display: block;
   width: 100%;
-  border: 1px solid rgba(228, 225, 225, 0.507);
+
   border-radius: 10px;
 
   height: auto;
@@ -985,6 +985,7 @@ a {
   .missionU img {
     width: 40%;
     margin: 10px auto;
+    background-color: inherit;
   }
 }
 /* 
