--- a/newx-demoGames.css
+++ b/newx-demoGames.css
@@ -463,7 +463,7 @@ body {
   box-sizing: border-box;
   border-bottom: 1px solid rgba(204, 201, 201, 0.733);
   width: 100%;
-  max-height: 345px;
+  max-height: 400px;
   object-fit: cover; /* Optional: adjusts how the image fits */
   height: auto;
   width: 100%;
@@ -596,7 +596,9 @@ a {
 }
 .claim-news-bonus button {
   box-sizing: border-box;
-  width: 200px;
+  width: fit-content;
+  padding-right: 10px;
+  padding-left: 10px;
   height: 50px;
   font-size: 25px;
   font-family: inherit;
