--- a/newx-demoGames.css
+++ b/newx-demoGames.css
@@ -2,7 +2,6 @@ body {
   margin: 0;
   height: 100vh;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  text-shadow: 5px;
   color: #ffffff;
   text-shadow: 2px 2px 10px rgb(0, 0, 0);
   background-color: black;
@@ -847,7 +846,7 @@ a {
     padding: 10px 0;
   }
   .slider h2 {
-    font-size: 25px;
+    font-size: 21px;
     margin: 0;
   }
   /* end of nes slider */
@@ -901,6 +900,7 @@ a {
     font-size: 20px;
     padding: 10px 10px 10px 21px;
   }
+
   .news-content-main h1 {
     font-size: 28px;
   }
@@ -1005,7 +1005,7 @@ a {
     margin: 20px auto;
   }
   .slider h2 {
-    font-size: 35px;
+    font-size: 30px;
   }
   .slider-wrapper {
     margin: 10px 0px 10px 10px;
@@ -1194,6 +1194,9 @@ a {
     padding: 40px 0 0 0;
     flex-wrap: wrap;
     height: 100vh;
+  }
+  h1 {
+    font-size: 28px;
   }
   .news-content-main h1 {
     font-size: 35px;
