--- a/reviews.css
+++ b/reviews.css
@@ -362,6 +362,7 @@ body {
 }
 
 .casino-allInfo {
+  display: block;
   box-sizing: border-box;
   width: 100%;
   height: 100%;
@@ -1069,8 +1070,16 @@ strong {
   /* Casino info page */
   .casino-allInfo {
     padding: 40px 0 0 0;
-    max-width: 1000px;
+
     justify-items: center;
+    margin: 0 0 0 200px;
+  }
+  .info-Block {
+    width: 100%;
+    max-width: 1000px;
+    height: fit-content;
+    display: block;
+    margin: 0 auto;
   }
 
   /* main info page of casino */
@@ -1103,11 +1112,6 @@ strong {
 }
 
 @media (min-width: 2000px) {
-  .casino-allInfo {
-    margin: auto;
-    justify-items: center;
-    max-width: 1200px;
-  }
   .casino-banner img {
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
